recipe app working with factory

--- a/app/recipe/list/recipe-list.html
+++ b/app/recipe/list/recipe-list.html
@@ -1,6 +1,37 @@
 <h3>Recipe List</h3>
+  <div class="list-group">
+    <a ng-repeat="recipe in $ctrl.recipes" class="list-group-item">
+      <h4 class="list-group-item-heading">{{recipe.title}}</h4>
+      <p class="list-group-item-text">
 
-  <form class="form" action="index.html" method="post">
+        <img ng-src="{{recipe.thumbnail}}" alt="">
+
+        {{recipe.ingredients}}
+
+      </p>
+      <button
+      ng-hide="$ctrl.service.isFavorite(recipe)"
+      ng-click="$ctrl.addFavorite(recipe)"
+      class="btn btn-success"
+      type="button"
+      name="button">
+        Add to Favorites
+      </button>
+      <button
+        ng-show="$ctrl.service.isFavorite(recipe)"
+        ng-click="$ctrl.removeFavorite(recipe)"
+        type="button"
+        class="btn btn-danger">
+        Remove Favorite
+      </button>
+    </a>
+  </div>
+
+
+
+
+  <!-- example of service update below -->
+  <!-- <form class="form">
     <div class="form-group">
       <label for="message">Message</label>
       <input ng-model="$ctrl.message" type="text" class="form-control" id="message" value="">
@@ -9,6 +40,5 @@
       update message
     </button>
 
-  </form>
-
-  <h4>Message: {{$ctrl.service.message}}</h4>
+  </form> -->
+  <!-- <h4>Message: {{$ctrl.service.message}}</h4> -->
